# lab4-hippodrome

./: CMakeLists.txt  Makefile  README.md  hippodrome.db  hippodrome.sql
.github/workflows/: build.yml
docs/: Database‐Schema.md  Functional‐Requirements.md  Glossary.md  Orel‐ED‐task1.md  Project‐Presentation.md  Project‐Specification.md  Sailaubaev‐AR.md  Supplementary‐Specification.md  _config.yml  index.md
includes/: BusinessLogic.h  DatabaseManager.h  UI.h
src/: BusinessLogic.cpp  DatabaseManager.cpp  UI.cpp  main.cpp
tests/: test_businesslogic.cpp  test_database.cpp
